--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body class="body-page">
+<!--  - -- -- - - -- - - - -- - --- - -HEADER- - - -- -- - - - -- - - -- - -->
     <header class="head">
         <!--Область навигации-->
         <div class="container headstyle">
@@ -27,7 +28,7 @@
                 <a href="./index.html" class="logo"><span class="logostyle">Web</span>Studio</a>
                 <ul class="site-nav cont-site">
 
-                    <li class="list-nav"><a href="" class="link current">Студия</a></li>
+                    <li class="list-nav"><a href="./index.html" class="link current">Студия</a></li>
                     <li class="list-nav"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="list-nav"><a href="" class="link">Контакты</a></li>
                 </ul>
@@ -54,15 +55,16 @@
             </ul>
         </div>
     </header>
+<!-- - - - -- - - - - -- - - -- - - -MAIN CONTENT- - -- - - - -- - - -- -- -- - -->
     <main>
-        <!--                    HERO BLOCK                   -->
+<!-- -- - - -- -- - - - --- -- - - -- -HERO BLOCK- - -- - - - - - -- - - -- -  -->
         <section class="greeting">
             <div class="greet-box container">
                 <h1 class="greeting-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="primary button">Заказать услугу</button>
             </div>
         </section>
-        <!--Особенности-->
+<!-- - - -- - -- -- - - -- - - -- - -- -Особенности- - - - -- - - -- - -- -- - --->
         <section class="features">
             <div class="feature container">
                 <ul class="features-list">
@@ -109,7 +111,7 @@
                 </ul>
             </div>
         </section>
-        <!-- Чем мы занимаемся -->
+<!--  -- - --- - - -- - -- - -- -Чем мы занимаемся- - -- -- - -- - - --- - - - -- -- -- -  -->
         <section class="work ">
             <div class="examples container">
                 <h2 class="examples-work-title">Чем мы занимаемся</h2>
@@ -122,7 +124,7 @@
                 </ul>
             </div>
         </section>
-        <!--Наша команда-->
+<!-- -- - -- -- - -- - - - -- - - - -Наша команда- - -- - - -- - - - -- - - -- - -- -->
         <section class="team-list">
             <div class="team container">
                 <h2 class="team-title">Наша команда</h2>
@@ -243,7 +245,7 @@
                 </ul>
             </div>
         </section>
-        <!--     Наши клиенты                -->
+<!--   -- - -- - -- - -- - -- - -- - - -- - - -- Наши клиенты - -- - -- - -- - -- -- - -- -- --->
         <section class="clients">
             <div class="clients-group">
                 <h2 class="clients-title">Постоянные клиенты</h2>
@@ -301,6 +303,7 @@
 
         </section>
     </main>
+<!--  -- - - -- - - -- - -- -- - - -- --FOOTER- - - -- - -- - -- - - -- - -- -- -  -->
     <footer class="footer-section">
         <div class="container">
             <div class="basement">
