--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
 <body class="body-page">
     <header class="head">
-        <!--Область навигации-->
+<!-- -- -- - -- - -- - -- - -Область навигации - -- - - -- -- - - -- - - - -->
         <div class="container headstyle">
             <nav class="container-nav">
                 <a href="./index.html" class="logo"><span class="logostyle">Web</span>Studio</a>
@@ -59,9 +59,9 @@
 
         <section class="very-good">
             <div class="container content">
-                <!-- --      --- ----  --- --- --- --- -- --- --- -- Фильтр--- --- -- ----->
+    <!-- --      --- ----  --- --- --- --- -- --- --- -- Фильтр--- --- -- ----->
                 <h2 class="hidden-title">Фильтр</h2>
-                <div class="filter-list">
+                
                     <ul class="filter">
                         <li class="item-btn"><button type="button" class="btn primary">Все</button></li>
                         <li class="item-btn"><button type="button" class="btn second">Веб-сайты</button></li>
@@ -69,8 +69,8 @@
                         <li class="item-btn"><button type="button" class="btn second">Дизайн</button></li>
                         <li class="item-btn"><button type="button" class="btn second">Маркетинг</button></li>
                     </ul>
-                </div>
-                <!-- --- --- --- -- -- ---- --- -- --- -- --- - Список работ -- -- -- -- -- - -->
+                
+    <!-- --- --- --- -- -- ---- --- -- --- -- --- - Список работ -- -- -- -- -- - -->
                 <h2 class="hidden-title">Список работ</h2>
 
                 <ul class="work-list">
@@ -152,6 +152,7 @@
             </div>
         </section>
     </main>
+    <!--  -- - --  -- - -- - -- - -  - - - - -- --  FOOTER - -- - -- - - -- - - - - - --  -->
     <footer class="footer-section">
         <div class="container">
             <div class="basement">
