--- a/index.html
+++ b/index.html
@@ -134,28 +134,36 @@
                             <h3 class="name">Игорь Демьяненко</h3>
                             <p class="profession">Product Designer</p>
                         </div>
-                        <div class="social-network">
-                            <a href="" class="instagram icon-link">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="twitter icon-link">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="facebook icon-link">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="linkedin icon-link">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <ul class="social-network">
+                            <li class="icon-link-item">
+                                <a href="" class="instagram icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="twitter icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="facebook icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="linkedin icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item"><img src="./images/img1.jpg" alt="Frontend Developer" width="270"
                             class="image">
@@ -163,84 +171,108 @@
                             <h3 class="name">Ольга Репина</h3>
                             <p class="profession">Frontend Developer</p>
                         </div>
-                        <div class="social-network">
-                            <a href="" class="instagram icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="twitter icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="facebook icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="linkedin icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <ul class="social-network">
+                            <li class="icon-link-item">
+                                <a href="" class="instagram icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="twitter icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="facebook icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="linkedin icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item"><img src="./images/img2.jpg" alt="Marketing" width="270" class="image">
                         <div class="profile-description">
                             <h3 class="name">Николай Тарасов</h3>
                             <p class="profession">Marketing</p>
                         </div>
-                        <div class="social-network">
-                            <a href="" class="instagram icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="twitter icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="facebook icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="linkedin icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <ul class="social-network">
+                            <li class="icon-link-item">
+                                <a href="" class="instagram icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="twitter icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="facebook icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="linkedin icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item"><img src="./images/img3.jpg" alt="UI Designer" width="270" class="image">
                         <div class="profile-description">
                             <h3 class="name">Михаил Ермаков</h3>
                             <p class="profession">UI Designer</p>
                         </div>
-                        <div class="social-network">
-                            <a href="" class="instagram icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="twitter icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="facebook icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a href="" class="linkedin icon-link" width="44" height="44">
-                                <svg width="20" height="20" class="social-link-icon">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <ul class="social-network">
+                            <li class="icon-link-item">
+                                <a href="" class="instagram icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="twitter icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="facebook icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-link-item">
+                                <a href="" class="linkedin icon-link">
+                                    <svg width="20" height="20" class="social-link-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -305,8 +337,7 @@
     </main>
 <!--  -- - - -- - - -- - -- -- - - -- --FOOTER- - - -- - -- - -- - - -- - -- -- -  -->
     <footer class="footer-section">
-        <div class="container">
-            <div class="basement">
+        <div class="container basement">
                 <div class="logo-address">
                     <a href="./index.html" class="foot-logo"><span class="footstyle">Web</span>Studio</a>
                     <address class="address-text ident">г. Киев, пр-т Леси Украинки, 26
@@ -318,7 +349,7 @@
                     </address>
                 </div>
                 <div class="social-link-list">
-                    <h2 class="social-link-head">ПРИСОДИНЯЙТЕСЬ</h2>
+                    <h2 class="social-link-head">ПРИСОДЕНЯЙТЕСЬ</h2>
                     <ul class="footer-social-list">
                         <li class="foot-social-item">
                             <a href="" class="instagram icon-link-footer">
@@ -350,7 +381,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+           
 
         </div>
     </footer>
