--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <ul class="features-list">
                     <li class="features-item">
                         <div class="features-icons">
-                            <svg width="70" height="70" class="icon-decoration">
+                            <svg width="70" height="70" class="features-icon-decoration">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -80,7 +80,7 @@
                     </li>
                     <li class="features-item">
                         <div class="features-icons">
-                            <svg width="70" height="70" class="icon-decoration">
+                            <svg width="70" height="70" class="features-icon-decoration">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -91,7 +91,7 @@
 
                     <li class="features-item">
                         <div class="features-icons">
-                            <svg width="70" height="70" class="icon-decoration">
+                            <svg width="70" height="70" class="features-icon-decoration">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -101,7 +101,7 @@
                     </li>
                     <li class="features-item">
                         <div class="features-icons">
-                            <svg width="70" height="70" class="icon-decoration">
+                            <svg width="70" height="70" class="features-icon-decoration">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -206,73 +206,75 @@
                         <div class="profile-description">
                             <h3 class="name">Николай Тарасов</h3>
                             <p class="profession">Marketing</p>
+                            <ul class="social-network">
+                                <li class="icon-link-item">
+                                    <a href="" class="instagram icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="twitter icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="facebook icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="linkedin icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="social-network">
-                            <li class="icon-link-item">
-                                <a href="" class="instagram icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="twitter icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="facebook icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="linkedin icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                       
                     </li>
                     <li class="team-item"><img src="./images/img3.jpg" alt="UI Designer" width="270" class="image">
                         <div class="profile-description">
                             <h3 class="name">Михаил Ермаков</h3>
                             <p class="profession">UI Designer</p>
+                            <ul class="social-network">
+                                <li class="icon-link-item">
+                                    <a href="" class="instagram icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="twitter icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="facebook icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-link-item">
+                                    <a href="" class="linkedin icon-link">
+                                        <svg width="20" height="20" class="social-link-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="social-network">
-                            <li class="icon-link-item">
-                                <a href="" class="instagram icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="twitter icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="facebook icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-link-item">
-                                <a href="" class="linkedin icon-link">
-                                    <svg width="20" height="20" class="social-link-icon">
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                        
                     </li>
                 </ul>
             </div>
